added calendar + time and added header for table

--- a/app/index.pug
+++ b/app/index.pug
@@ -7,6 +7,7 @@ html(lang='en')
 
         link(href='css/css-libs/core.css' rel='stylesheet')
         link(href='css/css-libs/datepicker.css' rel='stylesheet')
+        link(href='css/css-libs/slider.css' rel='stylesheet')
         link(href='css/css-libs/theme.css' rel='stylesheet')
         link(href='css/css-libs/jquery-ui-timepicker-addon.min.css' rel='stylesheet')
         link(href='css/main.css' rel='stylesheet')
@@ -63,10 +64,15 @@ html(lang='en')
 
         .todo-list-wrap-second
 
+        hr
+
+        input#datepicker
+
         // jQuery (necessary for Bootstrap's JavaScript plugins)
         script(src='js/vendor/jquery.min.js')
         script(src='js/vendor/jquery-ui.min.js')
         script(src='js/vendor/jquery-ui-timepicker-addon.min.js')
+        script(src='js/vendor/jquery-ui-sliderAccess.js')
         // Include all compiled plugins (below), or include individual files as needed
         script(src='js/lib/jquery.todo.js')
         script(src='js/main.js')
