--- a/app/index.pug
+++ b/app/index.pug
@@ -21,52 +21,7 @@ html(lang='en')
             'My Template'
     body
 
-        table
-            thead
-                tr
-                    th= 'Status'
-                    th= 'Description'
-                    th= 'Daedline'
-            tfoot
-                tr
-                    td(colspan='4')
-                        form
-
-            tr
-                td
-                    input(type='checkbox')
-                td
-                    p= 'Task description'
-                td
-                    span= '25.08.2017 10:30:45'
-                td
-                    a(href='#')= 'Remove'
-            tr
-                td
-                    input(type='checkbox')
-                td
-                    p= 'Task description'
-                td
-                    span= '25.08.2017 10:30:45'
-                td
-                    a(href='#')= 'Remove'
-            tr
-                td
-                    input(type='checkbox')
-                td
-                    p= 'Task description'
-                td
-                    span= '25.08.2017 10:30:45'
-                td
-                    a(href='#')= 'Remove'
-
         .todo-list-wrap
-
-        .todo-list-wrap-second
-
-        hr
-
-        input#datepicker
 
         // jQuery (necessary for Bootstrap's JavaScript plugins)
         script(src='js/vendor/jquery.min.js')
@@ -76,3 +31,21 @@ html(lang='en')
         // Include all compiled plugins (below), or include individual files as needed
         script(src='js/lib/jquery.todo.js')
         script(src='js/main.js')
+
+        script.
+            var dataListData = [
+                    [true, "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.", "25/08/2017 10:30:45"],
+                    [true, "It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.", "25/08/2017 10:30:45"],
+                    [true, "Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur,", "25/08/2017 10:30:45"],
+                    [true, "from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.", "25/08/2017 10:30:45"],
+                    [true, "Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of 'de Finibus Bonorum et Malorum' (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum,, comes from a line in section 1.10.32.", "25/08/2017 10:30:45"]
+                ];
+
+            $(".todo-list-wrap").todo({
+                dataListData: dataListData,
+                formDecorFunc: function(){
+                    $( ".todo-daedline" ).datetimepicker({
+                        timeFormat: "hh:mm:ss"
+                    });
+                }
+            });
